--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ button:hover{
 }
 
 .error {
-   background: #D4EDDA;
-   color: #40754C;
+   background: #F2DEDE;
+   color: #A94442;
    padding: 10px;
    width: 95%;
    border-radius: 5px;
